syntax = "proto3"; // Specify compiler version

package config;

service Config {
    rpc NewDagConfig(GeneralRequest) returns (GeneralResponse) {} // Create new config from genesis.json file
    rpc GetAllConfigs(GeneralRequest) returns (GeneralResponse) {} // Walk config dir
    rpc GetConfig(GeneralRequest) returns (GeneralResponse) {} // Log contents of config with network name
}

/* BEGIN REQUESTS */

message GeneralRequest {
    string filePath = 1; // File path

    string network = 2; // Network (e.g. "main_net")
}

/* END REQUESTS */

/* BEGIN RESPONSES */

message GeneralResponse {
    string message = 1; // Response
}

/* END REPSONSES */